teams/team-riker/dev/templates/alb-skiapp/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: skiapp-deployment
  namespace: team-riker
spec:
  selector:
    matchLabels:
      app: skiapp
  replicas: 2 
  template: 
    metadata:
      labels:
        app: skiapp
    spec:
      containers:
      - name: skiapp
        image: sharepointoscar/skiapp:v2
        ports:
        - containerPort: 8080
        resources:
          requests:
            memory: '100Mi'
            cpu: '250m'
          limits:
            memory: "128Mi"
